# serendipity-spend

./: .env.example  .gitignore  AGENTS.MD  Dockerfile  GAPS.md  README.md  architecture.MD  docker-compose.yml  gap_2.MD  gaps.md  gaps_remaining.md  prompt_export.MD  pyproject.toml  railway.MD  structured_outputs.MD  test_report.MD  test_report.md  testing.MD
Data/: Travel Reimbursement_DC_Jan 2026.xlsx  sample-data-notes.md
alembic/: env.py
alembic/versions/: 243ff3aab6e1_init.py  2f6f5369906b_scope_vendor_reference_uniqueness_to_claim.py  6a0a0c0d3df2_add_extraction_ai_cache.py  98874d3be5fd_add_claim_name.py  9b1e8c7c2f2a_merge_heads.py  add_supporting_pdf_key.py  d6c4a9f1e2b3_add_policy_exceptions.py  f971b58591ce_add_supporting_pdf_export.py
src/serendipity_spend/: bootstrap.py  main.py  models.py
src/serendipity_spend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/serendipity_spend/api/: deps.py  router.py
src/serendipity_spend/core/: config.py  currencies.py  db.py  html_pdf.py  (+5 more)
tests/: conftest.py  test_claim_routing.py  test_e2e_sample_pdf.py  test_eml_body_ingestion.py  test_expense_cross_claim_uniqueness.py  test_exports_merged_pdf_and_xlsx_format.py  test_extraction_ocr_fallback.py  test_file_type_detection.py  test_fx_auto_fetch.py  test_google_oauth_domain_restriction.py  test_msg_body_ingestion.py  test_policy_additional_rules.py  test_policy_exception_workflow.py  test_receipt_ai_cache.py  test_sourcefile_idempotency.py  test_storage_gc_on_claim_delete.py  test_ui_policy_summary.py  test_unsupported_upload_soft_fail.py
(+75 files in other folders)
